@@ -35,6 +35,9 @@ Display help and exit.
 .B \-\-version
 Display version information and exit.
 .TP
+.B \-\-pidfile FILE
+Write the process id to this file.
+.TP
 .B \-\-log FILE
 Specify log file. /var/log/mpdscribble/mpdscribble.log is used by default.
 The special value "syslog" makes mpdscribble use the local syslog
@@ -74,6 +77,9 @@ file using the command line option
 \-\-conf.
 
 Supported configuration options:
+.TP
+.B pidfile = FILE
+Write the process id to this file.
 .TP
 .B username = USERNAME
 Your audioscrobbler username.
